FTThomas Backup Restore

--- a/FestivalApplication/appsettings.Development.json
+++ b/FestivalApplication/appsettings.Development.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
+    "DBContext": "datasource=127.0.0.1;port=3306;username=root;password=;database=festivaldatabase;sslmode=none;"
 
-    "Azure": "server=LocalHost;user id=Yaniv;persistsecurityinfo=True;database=festivaldatabase;sslmode=None"
   }
 }
